Improve ck3 tag renderer and refactor